--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ branches:
 
 before_script:
   - npm install -g @angular/cli
+  - npm install -g typings
+  - typings install firebase
 
 script:
   - ng build --prod --env=prod --aot
