--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:8.9.1
 
-    working_directory: ~/repo
+    working_directory: ~/ScholarlyWeb
 
     steps:
       - checkout
