--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:8.9.1
+      - image: circleci/node:latest-browsers
 
     working_directory: ~/ScholarlyWeb
 
@@ -17,4 +17,4 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm ng build --prod --env=prod --no-progress
+      - run: yarn ng build --prod --env=prod --no-progress
